--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="row">
               <div class="col-sm-3"></div>
               <div class="col-sm-6">
-                <h1 class="text-success text-center fw-bolder">YOUNG CHANGEMAKERS CONFERENCE <br><span class="pb-2 border-bottom border-success border-5">Y.C.C. 6.0</span></h1>
+                <h1 class="text-success text-center fw-bolder">YOUNG CHANGEMAKERS' CONFERENCE <br><span class="pb-2 border-bottom border-success border-5">Y.C.C. 6.0</span></h1>
               </div>
               <div class="col-sm-3"></div>
             </div>
@@ -366,7 +366,7 @@
                                 </button>
                               </h2>
                               <div id="flush-collapseTen" class="accordion-collapse collapse" aria-labelledby="flush-headingTen" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">GELA is a fully registered international organization with headquarters in Nigeria and</div>
+                                <div class="accordion-body"GELA is a fully registered international organization with headquarters in Nigeria and brand ambassadors in 6 major cities in West Africa, including Accra.</div>
                               </div>
                             </div>
                           </div>
