--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                 </button>
                               </h2>
                               <div id="flush-collapseTen" class="accordion-collapse collapse" aria-labelledby="flush-headingTen" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body"GELA is a fully registered international organization with headquarters in Nigeria and brand ambassadors in 6 major cities in West Africa, including Accra.</div>
+                                <div class="accordion-body">GELA is a fully registered international organization with headquarters in Nigeria and brand ambassadors in 6 major cities in West Africa, including Accra.</div>
                               </div>
                             </div>
                           </div>
